# hera

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  ERROR_HANDLING.md  HERA_FRAMEWORK.md  LICENSE  README.md  SECURITY.md  SKILL.md  TESTING.md  eslint.config.js  install.sh  package-lock.json  package.json  tsconfig.json
cli/: hera-graph.ts  hera-init.ts  hera-provider.ts  hera-validate.ts  index.ts
docs/: MEMORY.md  PATTERNS.md  ROUTING.md  STREAMING.md
examples/python-agent/: AGENTS.md  README.md  pyproject.toml
examples/python-agent/src/: main.py
examples/python-agent/src/agent/: agent.py  loop.py  types.py
examples/python-agent/src/extensions/: __init__.py  logging.py  security.py  timing.py
examples/python-agent/src/providers/: anthropic_provider.py  openai_provider.py
examples/python-agent/src/session/: __init__.py  session.py  storage.py
examples/python-agent/src/tools/: __init__.py  bash.py  read_file.py  registry.py  write_file.py
examples/python-agent/tests/: test_agent.py
lib/: hera-checks.ts  hera-validator.ts
references/: 9router-architecture.md  aider-architecture.md  hermes-architecture.md  innovation-patterns.md  multi-provider-routing.md  provider-model-catalog.md
templates/: antigravity-wrapper.ts  api-key-validator.ts  embedding-provider.ts  image-provider.ts  minimal-agent-loop.ts  minimal-extension.ts  minimal-harness.ts  minimal-provider-fallback.ts  minimal-provider.ts  minimal-session.ts  minimal-tool.ts  multi-provider-router.ts  multimodal-input.ts  quota-tracker.ts  (+8 more)
(+53 files in other folders)
