[project]
name = "hera-example-agent"
version = "1.0.0"
description = "Complete AI coding agent built with Hera Framework"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "tiktoken>=0.7.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
